--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=7001
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
 spring.cloud.config.server.git.uri=https://github.com/763525854/Configuration-center
-#spring.cloud.config.server.git.searchPaths=相对搜索位置，可以配置多个
+spring.cloud.config.server.git.searchPaths=*
 spring.cloud.config.server.git.username=763525854@qq.com
 spring.cloud.config.server.git.password=q763525854
 
