指定本地的缓存配置地址

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ server.port=7001
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
 spring.cloud.config.server.git.uri=https://github.com/763525854/Configuration-center
-spring.cloud.config.server.git.searchPaths=*
+spring.cloud.config.server.git.searchPaths=springcloudinaction/config-repo
 spring.cloud.config.server.git.username=763525854@qq.com
 spring.cloud.config.server.git.password=q763525854
+##默认存储在c盘Users\Administrator\AppData\Local\Temp中，如下可指定缓存目录
+spring.cloud.config.server.git.basedir=D:\\Users\\config
 
