整合spring security，并配置用户名和密码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.cloud.config.server.git.username=763525854@qq.com
 spring.cloud.config.server.git.password=q763525854
 ##默认存储在c盘Users\Administrator\AppData\Local\Temp中，如下可指定缓存目录
 spring.cloud.config.server.git.basedir=D:\\Users\\config
+security.user.name=user
+security.user.password=78e99e7c-0cfa-49ab-9c64-6c46464rhyme
 
